--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de IMC</title>
+    <title>Simulador IMC</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Simulador de IMC</h1>
-    <p>Abre la consola para ver más detalles</p>
+    <div class="container">
+        <h1>Simulador de IMC</h1>
+        <h2>Ingresa tus datos</h2>
+        <form id="formularioIMC">
+            <label for="peso">Peso (kg):</label>
+            <input type="number" id="peso" placeholder="Ej: 70" required>
+
+            <label for="altura">Altura (cm):</label>
+            <input type="number" id="altura" placeholder="Ej: 170" required>
+
+            <button type="submit">Calcular IMC</button>
+        </form>
+
+        <div id="resultado"></div>
+    </div>
+
     <script src="JS/app.js"></script>
 </body>
 
