--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador IMC</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simulador de IMC</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 
 <body>
     <div class="container">
         <h1>Simulador de IMC</h1>
-        <h2>Ingresa tus datos</h2>
         <form id="formularioIMC">
             <label for="peso">Peso (kg):</label>
-            <input type="number" id="peso" placeholder="Ej: 70" required>
+            <input type="number" id="peso" required placeholder="Ej: 70" />
 
             <label for="altura">Altura (cm):</label>
-            <input type="number" id="altura" placeholder="Ej: 170" required>
+            <input type="number" id="altura" required placeholder="Ej: 170" />
 
             <button type="submit">Calcular IMC</button>
         </form>
 
         <div id="resultado"></div>
+
+        <h2>Historial de Registros</h2>
+        <div id="historial" class="historial"></div>
     </div>
+
 
     <script src="JS/app.js"></script>
 </body>
